# hostname

./: .gitignore  AUTHORS  COPYRIGHT  ChangeLog  Makefile  Makefile.am  README.md  configure.ac  hostname.1  hostname.c
debian/: changelog  control  dirs  rules
